Finalizando os endpoints de tickets e começando endpoints de relatório
